hack card header wrap fixing #8

--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -28,7 +28,7 @@
 }
 
 .title {
-  font-weight: bold;
+  font-size: 1rem;
 }
 
 .description {
